small fix to centrally align galerry item caption

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -128,7 +128,6 @@
 }
  .gallery_item_caption {
      margin-top: 0.5rem;
-     align-self: center;
      justify-self: center;
      text-align: center;
      color: #737373;
